@@ -1,11 +1,13 @@
 package anthony.SuperCraftBrawl.halloween;
 
+import anthony.SuperCraftBrawl.cosmetics.TitleCosmeticPackets;
 import org.bukkit.ChatColor;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabExecutor;
 import org.bukkit.entity.Player;
+import java.util.stream.Collectors;
 
 import java.util.Arrays;
 import java.util.Collections;
@@ -15,9 +17,9 @@ public class TrickTitleCommand implements CommandExecutor, TabExecutor {
 
 	// Works with either your passenger or packet manager — both expose
 	// enable/disable/toggle/isEnabled
-	private final TrickTitlePackets manager;
+	private final TitleCosmeticPackets manager;
 
-	public TrickTitleCommand(TrickTitlePackets manager) {
+	public TrickTitleCommand(TitleCosmeticPackets manager) {
 		this.manager = manager;
 	}
 
@@ -71,7 +73,10 @@ public class TrickTitleCommand implements CommandExecutor, TabExecutor {
 	public List<String> onTabComplete(CommandSender sender, Command cmd, String alias, String[] args) {
 		if (args.length == 1) {
 			String a = args[0].toLowerCase();
-			return Arrays.asList("on", "off", "toggle").stream().filter(opt -> opt.startsWith(a)).toList();
+			return Arrays.asList("on", "off", "toggle")
+					.stream()
+					.filter(opt -> opt.startsWith(a))
+					.collect(Collectors.toList());
 		}
 		return Collections.emptyList();
 	}
